manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mtccbapps
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: mtccbapps
