manifests/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mt-ingress
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ladangpintar.infrontconsulting.asia
    secretName: aks-ingress-tls
  rules:
  - host: ladangpintar.infrontconsulting.asia
    http:
      paths:
      - path: /mtccbapps(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mtccbapps
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mtccbapps
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtccbapps-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ladangpintar.infrontconsulting.asia
    secretName: azure-tls-csi
  rules:
  - host: ladangpintar.infrontconsulting.asia
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mtccbapps
            port: 
              number: 8080
